* 添加命令行的方式